top banner added

--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surid Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-
-
 </head>
 
 <body>
-
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Surid Chakma</span> World</h1>
+            <h3>Build hdvf yugsd ygvsd ys dsg</h3>
+            <p>hgwed ygwd ugsd wsudws dwdywsgd wsduxs xdugws ywsd weduwe dweygfdwe wey67fwed ued ygggggdwuwed ygsd
+                sysdgs
+                duia
+                sudgswd uyghd yud wduwedg suydgw dw udws ddyu</p>
+            <a class="link-button" target="_blank" href="https://fonts.google.com/specimen/Roboto">hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/74eacb18e261fdb1fa2c562501030c8f.jpg" alt="">
 </body>
+</div>
+</section>
 
 </html>
